# aa

./: .gitignore  Cargo.toml  README.md  reqs_old.json  spreadsheet_list.csv  vite.config.js
src/: app.css  app.html  cache.rs  criteria.rs  embed.rs  hooks.client.js  load.rs  main.rs  outbound.rs  requirements.rs  structs.rs  update.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  main.rs  structs.rs
src-tauri/src/events/: mod.rs  update.rs
src-tauri/src/load/: advancements.rs  archive.rs  comp.rs  context.rs  mod.rs  requirements.rs  world.rs
src/lib/: utils.js
src/lib/components/: Header.svelte
src/routes/: +layout.js  +layout.svelte
static/heads/: cached.json
web/: package-lock.json  package.json  svelte.config.js
web/src/: app.css  app.html  hooks.client.js
web/src-tauri/: tauri.conf.json
web/src/lib/: clientSettings.js  stores.js  utils.js
web/src/lib/components/: Advancement.svelte  Header.svelte  IconText.svelte  PlayerDropdown.svelte  PlayerIcon.svelte
web/src/routes/: +layout.js  +layout.svelte  +page.svelte
web/src/routes/adv/[...slug]/: +page.svelte
