[package]
name = "bactool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-stream = "0.3.6"
axum = "0.8.4"
base64 = "0.22.1"
crab_nbt = "0.2.11"
csv = "1.3.1"
flate2 = "1.1.2"
futures = "0.3.31"
notify = "8.0.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.45", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
uuid = "1.17.0"
walkdir = "2.5"
zip = "4.2.0"
