[package]
name = "bactool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-stream = "0.3.6"
axum = "0.8.4"
base64 = "0.22.1"
bytes = "1.10.1"
crab_nbt = "0.2.11"
csv = "1.3.1"
flate2 = "1.1.2"
futures = "0.3.31"
hex = "0.4.3"
mime_guess = "2.0.5"
notify = "8.0.0"
reqwest = { version = "0.12", features = ["json"] }
rust-embed = "8.7.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
tokio = { version = "1.45", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
uuid = "1.17.0"
walkdir = "2.5"
zip = "4.2.0"
