[package]
name = "aa"
version = "0.1.0"
description = "Advancement tracker"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
anyhow = "1"
async-stream = "0.3.6"
axum = "0.8.4"
base64 = "0.22.1"
bytes = "1.10.1"
crab_nbt = "0.2.11"
csv = "1.3.1"
flate2 = "1.1.2"
futures = "0.3.31"
hex = "0.4.3"
mime_guess = "2.0.5"
notify = "8.0.0"
reqwest = { version = "0.12", features = ["json"] }
rust-embed = "8.7.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
tokio = { version = "1.45", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
uuid = "1.17.0"
walkdir = "2.5"
zip = "4.2.0"
regex = "1.11.1"
